# google-tabFM-implementation

./: .gitignore  DATASET.md  HANDBOOK.md  README.md  RELEASE_NOTES.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: 00-overview.md  01-prerequisites.md  02-installation.md  03-first-run.md  04-core-concepts.md  05-working-with-data.md  06-training-or-usage-workflows.md  07-evaluation.md  08-troubleshooting.md  09-faq.md  10-next-steps.md  11-datasets-and-licenses.md  index.md
examples/: 01_minimal_classification.py  02_minimal_regression.py  03_default_vs_ensemble.py  04_churn_baseline_comparison.py  README.md
notebooks/: 00_beginner_walkthrough.ipynb  tabfm_quickstart_benchmark.ipynb  tabfm_telco_churn_production.executed.ipynb  tabfm_telco_churn_production.ipynb
problems/problem1_telecom_churn/: problem1_telecom_churn_tabfm.executed.ipynb  problem1_telecom_churn_tabfm.ipynb
problems/problem2_saas_subscription_churn/: problem2_saas_subscription_churn_kkbox.executed.ipynb  problem2_saas_subscription_churn_kkbox.ipynb
problems/problem3_credit_card_transaction_fraud/: problem3_credit_card_transaction_fraud_tabfm.executed.ipynb  problem3_credit_card_transaction_fraud_tabfm.ipynb
problems/problem4_insurance_claim_fraud/: problem4_insurance_claim_fraud_tabfm.executed.ipynb  problem4_insurance_claim_fraud_tabfm.ipynb
problems/problem5_house_price_prediction/: problem5_house_price_prediction_tabfm.executed.ipynb  problem5_house_price_prediction_tabfm.ipynb
problems/problem6_ride_fare_estimation/: problem6_ride_fare_estimation_tabfm.executed.ipynb  problem6_ride_fare_estimation_tabfm.ipynb
problems/problem7_loan_default_prediction/: problem7_loan_default_prediction_tabfm.executed.ipynb  problem7_loan_default_prediction_tabfm.ipynb
problems/problem8_employee_attrition_prediction/: problem8_employee_attrition_prediction_tabfm.executed.ipynb  problem8_employee_attrition_prediction_tabfm.ipynb
reports/: README.md  case_studies_summary.csv
scripts/: fetch_tabfm_weights.py  run_benchmark.py  run_strict_e2e.py  validate_repo_hygiene.sh
src/tabfm_benchmark/: __init__.py  benchmark.py  datasets.py  types.py
tests/: test_class_guard.py  test_datasets.py  test_integration_runner.py  test_metrics.py  test_schema.py
