[build-system]
requires = ["hatchling", "editables>=0.3,<0.4"]
build-backend = "hatchling.build"

[project]
name = "google-tabfm-implementation"
version = "2.1.1"
description = "Zero-to-mastery learning path and production-style benchmark suite for Google's TabFM"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "tabfm[pytorch]>=1.0.0",
  "polars>=1.31.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "jupyter>=1.1.1",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2",
  "loguru>=0.7.2",
  "xgboost>=3.2.0",
  "safetensors>=0.8.0",
]

[project.optional-dependencies]
dev = [
  "hatchling>=1.25.0",
  "pytest>=8.2.0",
  "nbconvert>=7.16.0",
  "ipykernel>=6.29.0",
]
docs = [
  "hatchling>=1.25.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tabfm_benchmark"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
